--- a/prim-strategies.org
+++ b/prim-strategies.org
@@ -705,14 +705,63 @@ because without a foundation of information that can be
 trusted they have lost all of their credibility and have
 hurt themselves as much as their opponents.
 
-This is why it's so interesting that BitCoin its great
-innovation of the /blockchain/ was invented during this
-period of large scale disinformation and errosion of trust
-in the truth of assertations that have been made.
+This is why it's so interesting that BitCoin and its great
+innovation the /blockchain/ was invented during this period
+of large scale disinformation and errosion of trust in the
+truth of assertations that have been made.
 
 
+             *SECTION On How BitCoin Works*
 
 
+The blockchain provides us with a means of establishing
+certainty between two parties even if neither party trust
+the other.   
+
+A bitcoin transaction is trusted because of the blockchain
+mechanism is not only trusted but transparent and
+verifiable.  This moves trust outside of human institutions
+which are, by definition, fallible.  There is now an
+enormous amount of effort being made in a large number of
+fields and industries to apply blockchain concepts to things
+which have nothing to do with currencies, finance or
+transactions.
+
+
+** Provenance
+
+[[https://en.wikipedia.org/wiki/Provenance][Provenance]] - Wikipedia
+
+Provenance is the chain or chronoology of the ownership,
+custody or location of a historical object.
+
+The idea is simple -- and it works like the /duck/
+principle.  If something looks like a duck, quaks like a
+duck and walks like a duck, it's probably a duck.
+
+The provenance of an object is something where a number of
+true statements have been collected that provide evidence
+that the object is what it is claimed to be.
+
+The more verifible facts that can be collected about the
+object the greater the confidence that one has in it's
+authenticity.
+
+This principle applies to many things in our lives, and is
+the primary method used to authenticate anything.  This is
+why it is common to demand that two forms of identification
+that includes a picture be produced to authenticate that a
+person is who they claim to be.
+
+Two factor authorization is a fairly new wrinkle but is no
+different -- the more verifible or trusted facts that can be
+presented, the higher the confidence level is that what is
+being claimed is true.
+
+** Facts
+
+Assertations -- which are determined to have a high
+confidence level that they are true are called /facts/.
 
 
 * Footnotes
