editing belief section

--- a/prim-strategies.org
+++ b/prim-strategies.org
@@ -954,11 +954,47 @@ which are empirically and obviously not true you start
 sliding down a water park ride with no water at the bottom
 to break your fall.
 
+Belief does not make a thing real or true.  But the further
+beliefs that contradict objective empirical reality, the
+more disfunctional we become as individuals and societies.
+
+What constitutes empircal reality is relative to the
+empirical evidence we have at any given time. Beliefs that
+are patently wrong today were at one time the best guess
+that the brightest people at the time could come up with.
+
+The earth was at the center of the universe, and then the
+solar system, and then of course it wasn't.  It's not that
+before Copernicus that the Sun actually revolved around the
+earth, but for all practical purposes, to the people who
+believed it, it was.  But once Copernicus improved the model
+of the world to better fit what was observed, it became
+true, until it wasn't and Galileo came along with his bloody
+telescopes that upset the Roman Catholic Church so much that
+he was not officially forgiven until the 20th century.
+
+You do the best to create a model of the world and how it
+works with what you have at hand.  It's perfectly fine to
+base beliefs and make descions based on those models.  But
+once that model has been replaced with a better model, then
+hanging on to those older beliefs is not sane and lowers
+your chance of survival.
+
 We as individuals and as societies are constantly telling
 ourselves, our children and our neighbors all sorts of
 nonsense.  Newborn babies are delivered by storks, an
 archetypal minor diety comes into your bedroom in your sleep
 and replaces a fallen tooth with hard currency.[fn:4]
+
+If someone hears voices or believes that they are talking to
+a giant rabbit named Harvey is seen as evidence of a mental
+break with reality.  But going to a large building and
+praying to something that you have been told exists but
+hasn't left any material evidence of it's existence is
+considered perfectly sane.  But only if you don't act on
+those beliefs in similar ways that xxxxx acted when he
+talked to Harvey.  We are expected to pay lip service to our
+beliefs, but acting on them is 
 
 These beliefs are vanquished as one grows up, but other
 preposterous beliefs are only reinforced, the world was
@@ -976,9 +1012,7 @@ they would die.
 
 Then there are lesser beliefs that persist though they have
 long been debunked.  Eating carrots gives you 20/20
-eyesight, reading in poor lightings damages your eyesight, 
-
-
+eyesight, reading in poor lightings damages your eyesight,
 
 and pretty much anything good that people believe about
 Donald Trump.
