--- a/prim-strategies.org
+++ b/prim-strategies.org
@@ -1,3 +1,4 @@
+
 #   -*- mode: org; fill-column: 60 -*-
 #+TITLE: Strategies for a Distributed Civilization
 #+STARTUP: showall
@@ -922,7 +923,7 @@ confidence level that they are true are called /facts/.
 
 ** Belief
 
-*TL;DR* this section should paint belief as a tricky beast
+:TL;DR: this section should paint belief as a tricky beast
 -- in one respect can seen as having confidence in a world
 model.  But when beliefs continue to be held that are
 contrary to newer models that have replaced them we become
@@ -954,15 +955,15 @@ six impossible things before breakfast.”
 
 If you don't, at any given time of the day, hold in your
 head any number of contradictory, foolish, incorrect,
-dangerous and even down right impossible things then you
-are not human.  Human cognition is a messy business and we
-might as well accept that and do the best we can to work
-around it, for our own sake and well as others.
+dangerous and even down right impossible things then you are
+not human. 
 
 It's all we can do, to take in sensory information and
 construct a model of what's going on outside our heads that
 doesn't get us killed.  That in itself is a remarkable
-achievement.
+achievement.  Human cognition is a messy business and we
+might as well accept that the best we can do is work around
+it those limitations, for our own sake and well as others.
 
 This does not give us licence to believe anything that pops
 into our heads.  Our survival as individuals and as a species
@@ -1042,6 +1043,22 @@ eyesight, reading in poor lightings damages your eyesight,
 
 and pretty much anything good that people believe about
 Donald Trump.
+
+
+--- I remember reading a book on UFOs in the 1970's that had
+a wonderful comment to the effect, that "the interior of all
+alien space craft looked like the interior of a '57 Buick"
+
+
+
+
+* Shop chains
+
+  - bamboo farm
+  - bamboo treatment
+  - laminate timber
+  - cut on demand
+  - assemble
 
 
 
