--- a/prim--bamboo.org
+++ b/prim--bamboo.org
@@ -91,11 +91,28 @@ The five main species for building with bamboo in Indonesia are:
      - [[https://www.guaduabamboo.com/species/gigantochloa-apus][Gigantochloa apus]]      | Guadua Bamboo
    - Guadua angustifolia
      - [[https://en.wikipedia.org/wiki/Guadua_angustifolia][Guadua angustifolia]]    | Wikipedia
+*** Nan Bamboos Thailand
+
+  - Dendrocalamus giganteus
+    - [[https://en.wikipedia.org/wiki/Dendrocalamus_giganteus][Dendrocalamus giganteus]]  | Wikipedia
+    - [[https://www.guaduabamboo.com/species/dendrocalamus-giganteus][Dendrocalamus giganteus]]  | Guadua Bamboo
+    - [[https://www.youtube.com/watch?v=uBApCRE95C4][Giant Bamboo Biggest in Thailand]] | YouTube
 
 ** Treatment
 
-Vertical Infusion Method
+   - [[https://www.youtube.com/watch?v=GRc3TxL1sn8][Guadua Bamboo Harvest and Treatment Process]] | YouTube
 
+ - Vertical Infusion Method
+ - Bouchrie Method
+** Equipment
+
+ - [[http://www.garnetindia.com/][Garnet India]] | Bamboo Processing Equipment
+ - [[https://www.youtube.com/watch?v=fpn0QZvvazs][Bamboo Universal Machine]] | YouTube
+ - [[http://www.garnetindia.com/262_Uni_wdwrkg.html][262 Universal Woodworking Bamboo Application Machine]] | Garnet India
+   garnetindia@gmail.com 
+   info@garnetindia.com
+
+** Poles
 ** Chipping (fuel)
 ** Plywood
 
